# base_trading_platform

./: .env.template  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
docker/django/: Dockerfile
trading_platform/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
trading_platform/migrations/: 0001_initial.py  0002_product.py  0003_networknode.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
